# vectomancy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  PROGRESS.md  README.es.md  README.fr.md  README.ja.md  README.md  README.zh-CN.md  README.zh-TW.md  README.zh.md  SECURITY.md  clippy.toml  deny.toml  flake.nix  generate_outputs.sh  native_mass_test.sh  nfpm.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci-cd.yml  ci.yml  docker-publish.yml  release.yml
assets/: dolphin_render.py
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
cli/tests/: cli_tests.rs
core/: Cargo.toml
core/benches/: math_benchmarks.rs
core/src/: config.rs
core/src/emitter/: mod.rs  native.rs  shader.wgsl
core/src/math/: fft.wgsl  mod.rs
core/src/models/: mod.rs
core/src/parser/: mod.rs  vector.rs
docs/: PROGRESS.md  agent_handoff.md  architecture_guidelines.md  configuration_guide.md  development_report.md  optimization_guide.md  release_v1_notes.md  software_requirements_specification.md  system_workflow.md  user_manual.md  user_manual.zh-CN.md
docs/plans/: 2026-05-09-ast-explosion-fix.md  2026-05-09-configurable-smoothing.md  2026-05-09-curve-smoothing-experiment.md  2026-05-10-native-formats-lsp-ignores.md
docs/specs/: 2026-05-09-ast-explosion-fix-design.md  2026-05-09-curve-smoothing-experiment-design.md
docs/superpowers/specs/: 2026-06-10-typography-design-engine.md  2026-06-25-parallel-worker-tiling-design.md  2026-06-25-vecto-ui-rebuild-design.md
packaging/aur/vectomancy/: PKGBUILD
packaging/aur/vectomancy-bin/: PKGBUILD
skills/vectomancy-cli/: SKILL.md
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  main.rs.orig
src/emitter/: mod.rs  native.rs  scratch.rs
src/math/: fft.wgsl  gpu.rs  mod.rs  spline.rs  wgpu_math.rs
src/models/: mod.rs
src/parser/: mod.rs  raster.rs  vector.rs
templates/: desmos.tera  geogebra.tera  html.tera  kmplot.tera  latex.tera  python.tera  wolfram.tera
tests/scripts/: fetch_curve.wls  test_script.py
text/: Cargo.toml  LICENSE
text/src/: lib.rs  parser.rs
video/: Cargo.toml  LICENSE
video/src/: lib.rs
