[package]
name = "vectomancy"
version = "1.1.0"
edition = "2021"
exclude = [
    "assets/",
    "tests/",
    "benches/",
    ".github/",
    "docs/",
    "templates/"
]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
directories = "5.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1.8"
tera = "1.19"
image = { version = "0.24", features = ["webp"] }
tiny-skia = "0.11"
usvg = "0.38"
rustfft = "6.1"
wgpu = "29.0.3"
pollster = "0.4.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
flate2 = "1.0"
base64 = "0.22"
toml = "1.1.2"
zip = "8.6.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "math_benchmarks"
harness = false
