[package]
name = "vectomancy"
version = "4.0.1"
edition = "2021"
description = "Vectomancy - Image to vector math CLI"
license = "MIT"
repository = "https://github.com/Xuepoo/vectomancy"
exclude = [
    "assets/",
    "tests/",
    "benches/",
    ".github/",
    "docs/"
]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
env_logger = "0.11"
log = "0.4"
directories = "5.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1.8"
tera = "1.19"
image = { version = "0.25", features = ["webp"] }
usvg = "0.38"
rustfft = "6.1"
wgpu = "29.0.3"
pollster = "0.4.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
flate2 = "1.0"
base64 = "0.22"
toml = "1.1.2"
zip = "8.6.0"
lyon_tessellation = { version = "1.0.20", features = ["std"] }
kiddo = "5.3.1"
imageproc = "0.26.2"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "math_benchmarks"
harness = false
