[package]
name = "vectomancy"
version = "6.0.1"
edition = "2021"
description = "Vectomancy - Image to vector math CLI core"
license = "MIT"
repository = "https://github.com/Xuepoo/vectomancy"
exclude = [
    "assets/",
    "tests/",
    "benches/",
    ".github/",
    "docs/"
]

[workspace]
resolver = "2"
members = [
    ".",
    "cli",
    "video",
    "text"
]
default-members = [
    ".",
    "cli",
    "video",
    "text"
]

[workspace.dependencies]
clap = { version = "4.4", features = ["derive"] }
rayon = "1.8"
wgpu = "29.0.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
toml = "1.1.2"

[dependencies]
log = "0.4"
directories = "5.0"
tera = "1.19"
rustfft = "6.1"
flate2 = "1.0"
base64 = "0.22"
zip = "8.6.0"
kiddo = "5.3.1"

# Workspace dependencies inherited
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }

# Optional dependencies based on features
rayon = { workspace = true, optional = true }
wgpu = { workspace = true, optional = true }
pollster = { version = "0.4.0", optional = true }
bytemuck = { version = "1.25.0", features = ["derive"], optional = true }
lyon_tessellation = { version = "1.0.20", features = ["std"], optional = true }
image = { version = "0.25", features = ["webp"], optional = true }
imageproc = { version = "0.26.2", optional = true }
usvg = { version = "0.38", optional = true }

[dev-dependencies]
criterion = "0.5"

[features]
default = ["parallel", "image", "svg"]
gpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck", "dep:lyon_tessellation"]
parallel = ["dep:rayon"]
image = ["dep:image", "dep:imageproc"]
svg = ["dep:usvg"]

[[bench]]
name = "math_benchmarks"
harness = false
