[package]
name = "vectomancy-cli"
version = "4.1.3"
edition = "2021"
description = "Vectomancy - CLI tool"

[dependencies]
vectomancy = { path = "../core" }
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
env_logger = "0.11"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1.8"
wgpu = "29.0.3"
