[package]
name = "vectomancy-text"
version = "5.0.14"
edition = "2021"
description = "Font outline extraction plugin for Vectomancy"
license = "MIT"
repository = "https://github.com/Xuepoo/vectomancy"

[dependencies]
vectomancy = { path = "..", version = "5.0.14" }
ab_glyph = "0.2"
thiserror = "1.0"
woff2 = "0.3"

[dev-dependencies]
ttf2woff2 = "0.12.0"
bytes = "1.5.0"
