[package]
name = "vectomancy-text"
version = "6.1.0"
edition = "2021"
description = "Font outline extraction plugin for Vectomancy"
license = "MIT"
repository = "https://github.com/Xuepoo/vectomancy"

[dependencies]
vectomancy = { path = "..", version = "6.1.0" }
ab_glyph = "0.2"
thiserror = "1.0"
woff2 = { package = "woff2-patched", version = "0.4.0" }

[dev-dependencies]
ttf2woff2 = "0.13.1"
bytes = "1.12.0"
