[package]
name = "vectomancy-video"
version = "5.0.4"
edition = "2021"
description = "Video frame processor extension for Vectomancy"

[dependencies]
vectomancy = { path = "..", version = "5.0.4" }
ffmpeg-next = "8.1"
crossbeam-channel = "0.5"
thiserror = "1.0"
image = { version = "0.25", features = ["webp"] }
